--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -281,296 +281,88 @@ button {
 }
 
 @media (max-width: 1025px) {
-  .navbar {
-    height: 120px;
-    width: 120% !important;
-    align-items: center !important;
-    justify-content: left !important;
-  }
-
-  .navbar .logo-navbar {
-    width: 50px;
-    height: 50px;
-    padding: 0px;
-    margin-left: 35px;
-  }
-
   .navbar .logo-navbar img {
-    height: 100%;
-    cursor: pointer;
+    width: 150px;
+    padding-left: 30px;
   }
-
-  .navbar-menu {
-    font-size: 0.6em;
+  .navbar ul {
+    padding-left: 10px;
   }
-
-  .search-input {
-    margin-top: -5px;
-    width: 250px;
-    height: 30px;
-    font-size: 0.6em;
-    /* margin-left: 50px; */
-  }
-
-  .ic_search {
-    /* left: 260px; */
-    margin-top: -5px;
-  }
-
-  .navbar button {
-    margin-left: 60px;
-    padding: 3px 15px;
-    font-size: 0.9em;
-    align-content: center;
-    margin-bottom: 5px;
-  }
-
-  .ic_basket {
-    margin-left: 65px;
-    width: 40px;
-    margin-top: -5px;
-  }
-
-  .avatar-container {
-    width: 45px;
-    height: 45px;
-    margin-left: 15px;
-    margin-top: 0px;
-  }
-
-  .avatar-img {
-    width: 35px;
-    height: 35px;
+  .form-control {
+    font-size: 0.8em !important;
   }
 }
 
-/* @media (max-width: 1025px) {
-  .navbar {
-    height: 120px;
-    width: 100% !important;
-    align-items: center !important;
-    justify-content: left !important;
-  }
-
-  .navbar .logo-navbar {
-    width: 100px;
-    height: 100px;
-    padding: 0px;
-    margin-left: -35px;
-  }
-
+@media (max-width: 960px) {
   .navbar .logo-navbar img {
-    height: 100%;
-    cursor: pointer;
+    width: 130px;
+    padding-left: 15px;
   }
-
   .navbar-menu {
-    font-size: 1.2em;
+    gap: 12px;
   }
+}
 
-  .search-input {
-    margin-top: -5px;
-    width: 250px;
-    height: 30px;
-    font-size: 0.9em;
-    margin-left: 50px;
+@media (max-width: 860px) {
+  .user-menu .avatar-container {
+    margin-left: -20px !important;
   }
-
-  .ic_search {
-    left: 260px;
-    margin-top: -5px;
+  .navbar-basket-icon {
+    margin-right: -10px !important;
   }
-
-  .navbar button {
-    margin-left: 60px;
-    padding: 3px 15px;
-    font-size: 0.9em;
-    align-content: center;
-    margin-bottom: 5px;
+  .form-control {
+    font-size: 0.8em !important;
   }
+}
 
-  .ic_basket {
-    margin-left: 65px;
-    width: 40px;
-    margin-top: -5px;
-  }
-
-  .avatar-container {
-    width: 45px;
-    height: 45px;
-    margin-left: 15px;
-    margin-top: 0px;
-  }
-
-  .avatar-img {
-    width: 35px;
-    height: 35px;
-  }
-} */
-
-/* @media (max-width: 854px) {
-  .navbar {
-    height: 100px;
-    width: 100% !important;
-    align-items: center !important;
-    justify-content: left !important;
-  }
-
-  .navbar .logo-navbar {
-    width: 80px;
-    height: 80px;
-    padding: 0px;
-    margin-left: -35px;
-  }
-
+@media (max-width: 810px) {
   .navbar .logo-navbar img {
-    height: 100%;
-    cursor: pointer;
+    width: 110px;
+    padding-left: 0px;
   }
-
-  .search-input {
-    margin-top: -5px;
-    width: 180px;
-    height: 30px;
-    font-size: 0.9em;
-    margin-left: 105px;
+  .navbar ul {
+    padding-left: 0px;
   }
-
-  .ic_search {
-    margin-top: -5px;
+  .navbar-menu {
+    margin-left: -25px;
   }
-
-  .navbar button {
-    margin-left: 60px;
-    padding: 3px 15px;
-    font-size: 0.9em;
-    align-content: center;
-    margin-bottom: 5px;
-  }
-
-  .ic_basket {
-    margin-left: 98px;
-    width: 33px;
-    margin-top: -5px;
-  }
-
-  .avatar-container {
-    width: 40px;
-    height: 40px;
-    margin-left: 55px;
-    margin-top: 0px;
-  }
-
-  .avatar-img {
-    width: 33px;
-    height: 33px;
-  }
-} */
-
-/* @media (max-width: 821px) {
-  .navbar {
-    height: 100px;
-    width: 100% !important;
-    align-items: center !important;
-    justify-content: left !important;
-  }
-
-  .navbar .logo-navbar {
-    width: 80px;
-    height: 80px;
-    padding: 0px;
-    margin-left: -35px;
-  }
-
-  .navbar .logo-navbar img {
-    height: 100%;
-    cursor: pointer;
-  }
-
-  .search-input {
-    margin-top: -5px;
-    width: 180px;
-    height: 30px;
-    font-size: 0.9em;
-    margin-left: 70px;
-  }
-
-  .ic_search {
-    left: 220px;
-    margin-top: -5px;
-  }
-
-  .navbar button {
-    margin-left: 60px;
-    padding: 3px 15px;
-    font-size: 0.9em;
-    align-content: center;
-    margin-bottom: 5px;
-  }
-
-  .ic_basket {
-    margin-left: 78px;
-    width: 33px;
-    margin-top: -5px;
-  }
-
-  .avatar-container {
-    width: 40px;
-    height: 40px;
-    margin-left: 30px;
-    margin-top: 0px;
-  }
-
-  .avatar-img {
-    width: 33px;
-    height: 33px;
-  }
-} */
+}
 
 @media (max-width: 769px) {
   .navbar {
-    height: 100px;
+    margin-top: -15px;
+    height: 85px;
     width: 100% !important;
     align-items: center !important;
     justify-content: left !important;
     flex-direction: row;
   }
-
   .navbar .logo-navbar {
     width: 50px;
-    height: 50px;
-    margin-right: 50px;
-    margin-left: 35px;
-  }
-
-  .navbar .logo-navbar img {
-    height: 80%;
-    cursor: pointer;
-    padding-left: 0px;
+    margin-right: 80px;
+    margin-left: 5px;
   }
   .navbar-menu {
     font-size: 0.9em;
     gap: 15px;
   }
-
   .navbar-right {
     display: flex;
     align-items: center;
     gap: 15px;
   }
-
   .search-input {
-    margin-top: -5px;
-    width: 100%;
-    height: 30px;
+    width: 95%;
+    height: 35px;
     font-size: 0.9em;
-    margin-left: 10px;
+    margin-left: 15px;
   }
-
   .ic_search {
-    margin-top: -5px;
+    margin-left: -35px !important;
   }
-
+  .ic_camera {
+    margin-right: 25px;
+  }
   .navbar button {
     margin-left: 60px;
     padding: 3px 15px;
@@ -584,83 +376,66 @@ button {
     width: 33px;
     margin-top: -5px;
   }
-
   .avatar-container {
     width: 40px;
     height: 40px;
     margin-left: 30px;
     margin-top: 0px;
   }
-
   .avatar-img {
     width: 33px;
     height: 33px;
+  }
+  .hamburger-menu-btn {
+    font-size: 1em !important;
+  }
+  .dropdown {
+    margin-right: 50px;
+  }
+  .user-menu .avatar-container {
+    margin-left: 0px !important;
+  }
+  .hamburger-big {
+    margin-right: -40px;
+    margin-left: 0px !important;
   }
 }
 
-/* @media (max-width: 576px) {
-  .navbar {
-    height: 110px;
-    width: 100% !important;
-    align-items: center !important;
-    justify-content: left !important;
-    flex-wrap: wrap;
-  }
-
+@media (max-width: 708px) {
   .navbar .logo-navbar {
-    width: 70px;
-    height: 70px;
     margin-left: 0px;
-    margin-right: 25px;
   }
+}
 
+@media (max-width: 688px) {
   .search-input {
-    margin-left: -5px;
-    margin-top: 7px;
-    width: 50vw;
-    height: 30px;
-    font-size: 0.9em;
+    width: 90%;
   }
-
-  .ic_search {
-
-    margin-top: 7px;
+  .ic_camera {
+    margin-right: 45px;
   }
-
-  .navbar button {
-    margin-left: 140px;
-    padding: 3px 15px;
-    font-size: 0.9em;
-    align-content: center;
-    margin-bottom: 20px;
+  .dropdown {
+    margin-left: -80px;
   }
+}
 
-  .navbar-menu {
-    gap: 10px;
-    order: 1;
-    margin-left: 25px;
-    margin-top: 3px;
-    font-size: 0.9em;
+@media (max-width: 600px) {
+  .search-input {
+    width: 85%;
   }
+  .ic_camera {
+    margin-right: 60px;
+  }
+  .dropdown {
+    margin-left: -80px;
+  }
+}
 
-  .ic_basket {
-    margin-left: 20vw;
-    width: 30px;
-    margin-top: 7px;
+@media (max-width: 576px) {
+  .navbar .logo-navbar img {
+    width: 80px;
   }
-
-  .avatar-container {
-    width: 40px;
-    height: 40px;
-    margin-left: 0vw;
-    margin-top: 19px;
-  }
-
-  .avatar-img {
-    width: 33px;
-    height: 33px;
-  }
-} */
+}
 
 @media (max-width: 481px) {
   .navbar {
